--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react-native": "0.76.1",
+    "react-native-calendar-picker": "^8.0.5",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-share": "^11.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
