--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.1",
